tests/error/postfix_no_match.gw
// [contains] no suitable resolutation for postfix operator
 Object o;
o++;
